<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nusim</name>
  <version>0.2.6</version>
  <description>Custom simulated robot environment for the turtlebot3.</description>
  <maintainer email="cwoodhayes@gmail.com">Conor Hayes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>turtlelib</depend>
  <depend>nuturtlebot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
