<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuslam</name>
  <version>0.0.1</version>
  <description>Implements SLAM nodes for the turtlebot3</description>
  <maintainer email="cwoodhayes@gmail.com">conorbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nuturtlebot_msgs</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>turtlelib</depend>
  <depend>hls_lfcd_lds_driver</depend>
  <depend>sensor_msgs</depend>
  <depend>armadillo</depend>
  <depend>turtle_control</depend>
  <test_depend>catch_ros2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
