<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuturtle_description</name>
  <version>0.2.6</version>
  <description>URDF files and debug + viz code for turtlebots used in the ME495 SLAM project</description>
  <maintainer email="cwoodhayes@gmail.com">Conor Hayes</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>turtlebot3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>