<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_control</name>
  <version>0.0.0</version>
  <description>Enables control of the Turtlebot3 via cmd_vel Twist messages</description>
  <maintainer email="cwoodhayes@gmail.com">conorbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>turtlelib</depend>
  <depend>nuturtlebot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
